# convert2

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.claude-plugin/: plugin.json
.github/workflows/: release.yml
docs/: TESTING.md  pdf-internals.md
example/markdown/attention/: attention.md
example/markdown/bert/: bert.md
example/markdown/clip/: clip.md
example/markdown/golden__1901.03003/: golden__1901.03003.md
example/markdown/golden__2408.02509v1/: golden__2408.02509v1.md
example/markdown/golden__issue-336-conto-economico-bialetti/: golden__issue-336-conto-economico-bialetti.md
example/markdown/golden__pdfua-1-reference-suite-1-1__PDFUA-Ref-2-01_Magazine-danish/: golden__pdfua-1-reference-suite-1-1__PDFUA-Ref-2-01_Magazine-danish.md
example/markdown/golden__pdfua-1-reference-suite-1-1__PDFUA-Ref-2-02_Invoice/: golden__pdfua-1-reference-suite-1-1__PDFUA-Ref-2-02_Invoice.md
example/markdown/gpt3/: gpt3.md
python/: virtruvian_pdf.py
scripts/: fetch-papers.sh
skills/summarize-pdf/: SKILL.md
src/: batch.rs  cli.rs  error.rs  index.ts  main.rs  python-bridge.ts
src/document/: types.rs
src/docx/: extractor.rs
src/epub/: extractor.rs
src/formats/: karpathy.rs  mod.rs  rag.rs
src/html_extract/: extractor.rs
src/hybrid/: client.rs  mod.rs  page_extract.rs  triage.rs
src/layout/: classifier.rs  mod.rs  xycut.rs
src/pdf/: extractor.rs  metadata.rs  mod.rs
src/pptx/: extractor.rs
src/render/: markdown.rs
tests/: golden.rs  hybrid.rs
tests/snapshots/: attention_page_1.md
(+11 files in other folders)
