[package]
name = "cnv"
version = "0.1.0"
edition = "2021"
description = "Convert files to AI-friendly markdown structures"
license = "MIT"

[[bin]]
name = "cnv"
path = "src/main.rs"

[dependencies]
# PDF processing — bundles MuPDF from source, requires clang for bindgen
mupdf = "0.6.0"
# CLI
clap = { version = "4", features = ["derive"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Parallelism
rayon = "1"
# Error handling
thiserror = "2"
anyhow = "1"
# Text processing
regex = "1"
unicode-segmentation = "1"
# Glob pattern matching for batch input
glob = "0.3"
pulldown-cmark = "0.13.3"
toml = "1.1.2"
zip = "8.5.1"
quick-xml = "0.39.2"
scraper = "0.26.0"
resvg = "0.47.0"

[profile.release]
opt-level = 3
lto = true
